--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Call Us</h3>
-                                            <p>+012 345 6789</p>
+                                            <p>+234 803 096 7886</p>
                                         </div>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Email Us</h3>
-                                            <p>info@example.com</p>
+                                            <p>info@tezeonservicesltd.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -109,7 +109,7 @@
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="https://htmlcodex.com/construction-company-html-template">Download Pro Version</a>
+                                <!--a class="btn" href="https://htmlcodex.com/construction-company-html-template">Download Pro Version</a-->
                             </div>
                         </div>
                     </nav>
@@ -146,96 +146,96 @@
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="service-item">
                                 <div class="service-img">
-                                    <img src="img/service-1.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703180023/water_installation_qiomfk.jpg" alt="Image">
                                     <div class="service-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                                            Water filtration system.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="service-text">
-                                    <h3>Building Construction</h3>
-                                    <a class="btn" href="img/service-1.jpg" data-lightbox="service">+</a>
+                                    <h3>Water Filtration</h3>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703180023/water_installation_qiomfk.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="service-item">
                                 <div class="service-img">
-                                    <img src="img/service-2.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179993/tank_rqjgdq.jpg" alt="Image">
                                     <div class="service-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                                            Reservoir construction
                                         </p>
                                     </div>
                                 </div>
                                 <div class="service-text">
-                                    <h3>House Renovation</h3>
-                                    <a class="btn" href="img/service-2.jpg" data-lightbox="service">+</a>
+                                    <h3>Reservoir</h3>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179993/tank_rqjgdq.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="service-item">
                                 <div class="service-img">
-                                    <img src="img/service-3.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179926/drilling_pvs4dm.jpg" alt="Image">
                                     <div class="service-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                                            Water exploration.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="service-text">
-                                    <h3>Architecture Design</h3>
-                                    <a class="btn" href="img/service-3.jpg" data-lightbox="service">+</a>
+                                    <h3>Exploration</h3>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179926/drilling_pvs4dm.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                             <div class="service-item">
                                 <div class="service-img">
-                                    <img src="img/service-4.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179979/Stansion_vjhu83.jpg" alt="Image">
                                     <div class="service-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                                            Installation of stansions
                                         </p>
                                     </div>
                                 </div>
                                 <div class="service-text">
-                                    <h3>Interior Design</h3>
-                                    <a class="btn" href="img/service-4.jpg" data-lightbox="service">+</a>
+                                    <h3>Home water system</h3>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179979/Stansion_vjhu83.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                             <div class="service-item">
                                 <div class="service-img">
-                                    <img src="img/service-5.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179957/plumbing_eiwbiz.jpg" alt="Image">
                                     <div class="service-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                                            Plumbing works.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="service-text">
-                                    <h3>Fixing & Support</h3>
-                                    <a class="btn" href="img/service-5.jpg" data-lightbox="service">+</a>
+                                    <h3>Plumbing and piping</h3>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179957/plumbing_eiwbiz.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                             <div class="service-item">
                                 <div class="service-img">
-                                    <img src="img/service-6.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179941/filtration_dz03pl.jpg" alt="Image">
                                     <div class="service-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                                            Home water system.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="service-text">
-                                    <h3>Painting</h3>
-                                    <a class="btn" href="img/service-6.jpg" data-lightbox="service">+</a>
+                                    <h3>Water system</h3>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179941/filtration_dz03pl.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
