--- a/about.html
+++ b/about.html
@@ -381,11 +381,11 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
-                                <a href=""></a>
-                                <a href="">House Renovation</a>
-                                <a href="">Architecture Design</a>
-                                <a href="">Interior Design</a>
-                                <a href="">Painting</a>
+                                <a href="">Water exploration and borehole installation</a>
+                                <a href="">Treatment plant management</a>
+                                <a href="">Home & Estate piping/plumbing</a>
+                                <a href="">Sewage management</a>
+                                <a href="">Factory setup & swimming pool design </a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
