--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <meta content="water exploration company" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703252989/wter_company_felxm6.jpg" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
                             <div class="logo">
                                 <a href="index.html">
                                     <h1>Tezeon Services limited</h1>
-                                    <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703252989/wter_company_felxm6.jpg" alt="Logo">
                                 </a>
                             </div>
                         </div>
