--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
                                         <i class="flaticon-worker"></i>
                                     </div>
                                     <div class="fact-text">
-                                        <h2 data-toggle="counter-up">5</h2>
+                                        <h2 data-toggle="counter-up">20</h2>
                                         <p>Expert Workers</p>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                     </div>
                                     <div id="collapseOne" class="collapse" data-parent="#accordion-1">
                                         <div class="card-body">
-                                            Yes we do. we can work anywhere in the Globe, all that is required is to mobile us for the location and we would deliver faithfully.
+                                            Yes we do. we can work anywhere in the Globe, all that is required is to mobilization to the location and we would deliver faithfully.
                                         </div>
                                     </div>
                                 </div>
