--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Tezeon Services limited</h1>
+                                    <h1>Tezeon</h1>
                                     <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703252989/wter_company_felxm6.jpg" alt="Logo">
                                 </a>
                             </div>
