--- a/contact.html
+++ b/contact.html
@@ -157,14 +157,14 @@
                                     <i class="flaticon-call"></i>
                                     <div class="contact-text">
                                         <h2>Phone</h2>
-                                        <p>+234 803 096 7886</p>
+                                        <p>+234 803 096 7886, +234 705 919 9474</p>
                                     </div>
                                 </div>
                                 <div class="contact-item">
                                     <i class="flaticon-send-mail"></i>
                                     <div class="contact-text">
                                         <h2>Email</h2>
-                                        <p>1mawoda@gmail.com</p>
+                                        <p>info@tezeonservicesltd.com</p>
                                     </div>
                                 </div>
                             </div>
