--- a/index.html
+++ b/index.html
@@ -741,23 +741,23 @@
                         <div class="col-12">
                             <div class="testimonial-slider">
                                 <div class="slider-item">
-                                    <h3>Chevron</h3>
-                                    <h4>Oil company</h4>
+                                    <h3>Orange Island</h3>
+                                    <h4>Estate</h4>
                                     <p>They are trust worthy.</p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Orange Island</h3>
-                                    <h4>Estate urban settlement</h4>
+                                    <h3>Chalcedony School</h3>
+                                    <h4>School</h4>
                                     <p>Did not regret giving them the job.</p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Landwey</h3>
-                                    <h4>Real Estate Agency</h4>
+                                    <h3>Pinnacle Oil and Gas</h3>
+                                    <h4>Oil Company</h4>
                                     <p>Absolutely enjoyed working with them.</p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Pinnacle Oil and Gas</h3>
-                                    <h4>Oil and gas company</h4>
+                                    <h3>Landwey</h3>
+                                    <h4>Real Estate Company</h4>
                                     <p>Alway maintain my piping installations.</p>
                                 </div>
                                 <!--div class="slider-item">
@@ -766,9 +766,9 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
                                 </div-->
                                 <div class="slider-item">
-                                    <h3>Chalcedony School</h3>
-                                    <h4>School</h4>
-                                    <p>They brought clean water to the school.</p>
+                                    <h3>Chevron</h3>
+                                    <h4>Oil and gas Company</h4>
+                                    <p>They are our trusted partner.</p>
                                 </div>
                                 <!--div class="slider-item">
                                     <h3>Customer Name</h3>
@@ -927,7 +927,7 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="#">tezeonservicesltd.com</a>, All Right Reserved.</p>
                         </div>
 
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
