--- a/service.html
+++ b/service.html
@@ -478,6 +478,31 @@
         <script src="lib/waypoints/waypoints.min.js"></script>
         <script src="lib/counterup/counterup.min.js"></script>
         <script src="lib/slick/slick.min.js"></script>
+		<script defer async>
+  document.addEventListener('DOMContentLoaded', function() {
+    // setting global variables
+    window.botId = 2916
+    
+    // create div with id = sarufi-chatbox
+    const div = document.createElement("div")
+    div.id = "sarufi-chatbox"
+    document.body.appendChild(div)
+
+    // create and attach script tag
+    const script = document.createElement("script")
+    script.crossOrigin = true
+    script.type = "module"
+    script.src = "https://cdn.jsdelivr.net/gh/flexcodelabs/sarufi-chatbox/example/vanilla-js/script.js"
+    document.head.appendChild(script)
+
+    // create and attach css
+    const style = document.createElement("link")
+    style.crossOrigin = true
+    style.rel = "stylesheet"
+    style.href = "https://cdn.jsdelivr.net/gh/flexcodelabs/sarufi-chatbox/example/vanilla-js/style.css"
+    document.head.appendChild(style)
+  });
+</script>
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
