--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <!-- Video Start -->
             <div class="video wow fadeIn" data-wow-delay="0.1s">
                 <div class="container">
-                    <button type="button" class="btn-play" data-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
+                    <button type="button" class="btn-play" data-toggle="modal" data-src="https://res.cloudinary.com/dxd3nmbag/video/upload/v1703577957/water_testing_eqqo3a.mp4" data-target="#videoModal">
                         <span></span>
                     </button>
                 </div>
