--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
                                     <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703283161/team_a_yy6jp5.jpg" alt="Team Image">
                                 </div>
                                 <div class="team-text">
-                                    <h2>Jhon Doe</h2>
-                                    <p>Group</p>
+                                    <h2>Group photo</h2>
+                                    <p>Group photo</p>
                                 </div>
                                 <!--div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
