--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv='cache-control' content='no-cache'> 
+	<meta http-equiv='expires' content='0'> 
+	<meta http-equiv='pragma' content='no-cache'>
         <title>Tezeon Services limited | Pioneering Sustainable Water Solutions</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="hydrogeological company, water company, drilling and exploration" name="keywords">
