--- a/about.html
+++ b/about.html
@@ -145,7 +145,9 @@
                     <div class="row align-items-center">
                         <div class="col-lg-5 col-md-6">
                             <div class="about-img">
-                                <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703180023/water_installation_qiomfk.jpg" alt="Image">
+				    <video autoplay muted loop>
+					    <source src="https://res.cloudinary.com/dxd3nmbag/video/upload/v1704281176/done_loop_fwxh3x.mp4" type="video/mp4">
+				    </video>
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
