--- a/index.html
+++ b/index.html
@@ -219,7 +219,10 @@
                     <div class="row align-items-center">
                         <div class="col-lg-5 col-md-6">
                             <div class="about-img">
-                                <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703180023/water_installation_qiomfk.jpg" alt="Image">
+				    <video autoplay muted loop>
+					    <source src="https://res.cloudinary.com/dxd3nmbag/video/upload/v1703577957/water_testing_eqqo3a.mp4" type="video/mp4">
+					    Your brower does not support this video.
+				    </video>
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
