--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Tezeon</h1>
-                                    <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                                   <!-- <h1>Tezeon</h1> -->
+                        
+                                   <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/t_background/v1755387123/water_2_ynh8ed.png" 
+                                    alt="logo"
+                                    style="width: auto">
                                 </a>
                             </div>
                         </div>
@@ -54,7 +57,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Opening Hour</h3>
-                                            <p>Mon - Fri, 8:00 - 9:00</p>
+                                            <p>Mon - Fri, 8:00 - 9:00</p>           
                                         </div>
                                     </div>
                                 </div>
