--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                                    <!-- <h1>Tezeon</h1> -->
                         
                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/t_background/v1755387123/water_2_ynh8ed.png" 
-                                    alt="logo"
-                                    style="width: auto">
+                                    alt="logo">
                                 </a>
                             </div>
                         </div>
