--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Tezeon</h1>
-                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703252989/wter_company_felxm6.jpg" alt="Logo">
+                                    <!-- <h1>Tezeon</h1> -->
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1755441476/waterlog_lnxqbb.png">
                                 </a>
                             </div>
                         </div>
