--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                                 <a href="index.html">
                                    <!-- <h1>Tezeon</h1> -->
                         
-                                   <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/t_background/v1755387123/water_2_ynh8ed.png" 
-                                    alt="logo">
+                                   <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1755441476/waterlog_lnxqbb.png">
                                 </a>
                             </div>
                         </div>
