--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Tezeon</h1>
-                                    <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                                  
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1755441476/waterlog_lnxqbb.png">
                                 </a>
                             </div>
                         </div>
